<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewBack"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <ImageView
        android:id="@+id/imageViewQuit"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_lock_power_off" />

    <ImageView
        android:id="@+id/imgUser1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/user1"
        android:contentDescription="@string/user1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="65dp"/>

    <TextView
        android:id="@+id/titleYou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_user1"
        android:fontFamily="@font/muli_bold"
        android:textColor="@color/colorSecondaryLight"
        android:textSize="20sp"
        android:layout_marginTop="88dp"
        android:layout_marginStart="2dp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/imgUser1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/valueYou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:fontFamily="@font/muli_bold"
        android:textColor="@color/amarelo"
        android:textSize="25sp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="180dp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/twoPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=":"
        android:fontFamily="@font/muli_bold"
        android:textColor="@color/colorLightGray"
        android:textSize="25sp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="5dp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/valueYou"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/valueDroid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:fontFamily="@font/muli_bold"
        android:textColor="@color/amarelo"
        android:textSize="25sp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="5dp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/twoPoints"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgUser2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/user3"
        android:contentDescription="@string/user2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="68dp"/>

    <TextView
        android:id="@+id/titleDroid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_user2"
        android:fontFamily="@font/muli_bold"
        android:textColor="@color/colorLightGray"
        android:textSize="20sp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="60dp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="-16dp"
        app:cardBackgroundColor="@color/colorPrimaryLight"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgUser2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardContentLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

<!--            &lt;!&ndash; Título Wins &ndash;&gt;-->
<!--            <TextView-->
<!--                android:id="@+id/titleWins"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/wins"-->
<!--                android:textColor="@color/colorLightGray"-->
<!--                android:textSize="20sp"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:layout_marginStart="40dp"-->
<!--                android:textAlignment="center"-->
<!--                android:textStyle="bold"-->
<!--                android:fontFamily="@font/muli_bold"-->
<!--                app:layout_constraintStart_toStartOf="@id/cardContentLayout"-->
<!--                app:layout_constraintTop_toTopOf="@id/cardContentLayout" />-->

<!--            <TextView-->
<!--                android:id="@+id/valueWins"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/zero"-->
<!--                android:textColor="@color/colorSecondaryDark"-->
<!--                android:textSize="18sp"-->
<!--                android:layout_marginTop="5dp"-->
<!--                android:layout_marginStart="20dp"-->
<!--                android:textAlignment="center"-->
<!--                android:fontFamily="@font/muli_bold"-->
<!--                app:layout_constraintStart_toStartOf="@id/titleWins"-->
<!--                app:layout_constraintTop_toBottomOf="@id/titleWins" />-->

<!--            &lt;!&ndash; Título Tie &ndash;&gt;-->
<!--            <TextView-->
<!--                android:id="@+id/titleTie"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/tie"-->
<!--                android:textColor="@color/colorLightGray"-->
<!--                android:textSize="20sp"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:layout_marginStart="85dp"-->
<!--                android:textAlignment="center"-->
<!--                android:textStyle="bold"-->
<!--                android:fontFamily="@font/muli_bold"-->
<!--                app:layout_constraintStart_toEndOf="@id/titleWins"-->
<!--                app:layout_constraintTop_toTopOf="@id/cardContentLayout" />-->

<!--            <TextView-->
<!--                android:id="@+id/valueTie"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/zero"-->
<!--                android:textColor="@color/colorSecondaryDark"-->
<!--                android:textSize="18sp"-->
<!--                android:layout_marginTop="5dp"-->
<!--                android:layout_marginStart="10dp"-->
<!--                android:textAlignment="center"-->
<!--                android:fontFamily="@font/muli_bold"-->
<!--                app:layout_constraintStart_toStartOf="@id/titleTie"-->
<!--                app:layout_constraintTop_toBottomOf="@id/titleTie" />-->

<!--            &lt;!&ndash; Título Lost &ndash;&gt;-->
<!--            <TextView-->
<!--                android:id="@+id/titleLost"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/lost"-->
<!--                android:textColor="@color/colorLightGray"-->
<!--                android:textSize="20sp"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:layout_marginStart="85dp"-->
<!--                android:textAlignment="center"-->
<!--                android:textStyle="bold"-->
<!--                android:fontFamily="@font/muli_bold"-->
<!--                app:layout_constraintStart_toEndOf="@id/titleTie"-->
<!--                app:layout_constraintTop_toTopOf="@id/cardContentLayout" />-->

<!--            <TextView-->
<!--                android:id="@+id/valueLost"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/zero"-->
<!--                android:textColor="@color/colorSecondaryDark"-->
<!--                android:textSize="18sp"-->
<!--                android:layout_marginTop="5dp"-->
<!--                android:layout_marginStart="20dp"-->
<!--                android:textAlignment="center"-->
<!--                android:fontFamily="@font/muli_bold"-->
<!--                app:layout_constraintStart_toStartOf="@id/titleLost"-->
<!--                app:layout_constraintTop_toBottomOf="@id/titleLost" />-->

            <Button
                android:id="@+id/button1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="14dp"
                android:layout_marginEnd="14dp"
                android:layout_marginStart="14dp"
                android:background="?attr/colorControlHighlight"
                android:fontFamily="@font/muli_bold"
                android:textColor="@color/colorSecondaryDark"
                android:textSize="?android:attr/windowTitleSize"
                app:layout_constraintBottom_toTopOf="@+id/button4"
                app:layout_constraintEnd_toStartOf="@+id/button2"
                app:layout_constraintStart_toEndOf="@+id/button0" />

            <Button
                android:id="@+id/button2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="14dp"
                android:layout_marginEnd="28dp"
                android:background="?attr/colorControlHighlight"
                android:fontFamily="@font/muli_bold"
                android:textColor="@android:color/background_light"
                android:textSize="?android:attr/windowTitleSize"
                app:layout_constraintBottom_toTopOf="@+id/button5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button1" />

            <Button
                android:id="@+id/button3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="14dp"
                android:layout_marginStart="28dp"
                android:background="?attr/colorControlHighlight"
                android:fontFamily="@font/muli_bold"
                android:textColor="@android:color/background_light"
                android:textSize="?android:attr/windowTitleSize"
                app:layout_constraintBottom_toTopOf="@+id/button6"
                app:layout_constraintEnd_toStartOf="@+id/button4"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/button4"
                style="@android:style/Widget.Holo.Button"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="14dp"
                android:layout_marginEnd="14dp"
                android:layout_marginStart="14dp"
                android:background="?attr/colorControlHighlight"
                android:fontFamily="@font/muli_bold"
                android:textColor="@android:color/black"
                android:textSize="?android:attr/windowTitleSize"
                app:layout_constraintBottom_toTopOf="@+id/button7"
                app:layout_constraintEnd_toStartOf="@+id/button5"
                app:layout_constraintStart_toEndOf="@+id/button3" />

            <Button
                android:id="@+id/button5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="14dp"
                android:layout_marginEnd="28dp"
                android:background="?attr/colorControlHighlight"
                android:fontFamily="@font/muli_bold"
                android:textColor="@android:color/black"
                android:textSize="?android:attr/windowTitleSize"
                app:layout_constraintBottom_toTopOf="@+id/button8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button4" />

            <Button
                android:id="@+id/button6"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="80dp"
                android:layout_marginStart="28dp"
                android:background="?attr/colorControlHighlight"
                android:fontFamily="@font/muli_bold"
                android:textColor="@android:color/black"
                android:textSize="?android:attr/windowTitleSize"
                app:layout_constraintBottom_toTopOf="@+id/buttonReset"
                app:layout_constraintEnd_toStartOf="@+id/button7"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/button7"
                android:layout_width="100dp"
                android:layout_height="101dp"
                android:layout_marginBottom="80dp"
                android:layout_marginEnd="14dp"
                android:layout_marginStart="14dp"
                android:background="?attr/colorControlHighlight"
                android:fontFamily="@font/muli_bold"
                android:textColor="@android:color/background_light"
                android:textSize="?android:attr/windowTitleSize"
                app:layout_constraintBottom_toTopOf="@+id/buttonReset"
                app:layout_constraintEnd_toStartOf="@+id/button8"
                app:layout_constraintStart_toEndOf="@+id/button6" />

            <Button
                android:id="@+id/button8"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="80dp"
                android:layout_marginEnd="28dp"
                android:background="?attr/colorControlHighlight"
                android:fontFamily="@font/muli_bold"
                android:textColor="@android:color/background_light"
                android:textSize="?android:attr/windowTitleSize"
                app:layout_constraintBottom_toTopOf="@+id/buttonReset"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button7" />

            <Button
                android:id="@+id/buttonReset"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="50dp"
                android:fontFamily="@font/muli_bold"
                android:textColor="@color/colorSecundaryYellow"
                android:text="@string/reset"
                android:textSize="20sp"
                app:strokeColor="@color/colorSecundaryYellow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

<!--            <Button-->
<!--                android:id="@+id/buttonReset"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:background="@color/colorPrimaryDark"-->
<!--                android:fontFamily="@font/muli_bold"-->
<!--                android:text="@string/reset"-->
<!--                android:textColor="@android:color/background_light"-->
<!--                android:textSize="14sp"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent" />-->

            <Button
                android:id="@+id/button0"
                style="@android:style/Widget.Holo.Button.Toggle"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="14dp"
                android:layout_marginStart="28dp"
                android:background="?attr/colorControlHighlight"
                android:fontFamily="@font/muli_bold"
                android:textColor="@android:color/background_light"
                android:textSize="?android:attr/windowTitleSize"
                app:layout_constraintBottom_toTopOf="@+id/button3"
                app:layout_constraintEnd_toStartOf="@+id/button1"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>